git-svn-id: http://devel.cpl.upc.edu/freeling/svn/latest/freeling@283 9b274142-39a2-40f6-a478-1b104364ee40

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -37,8 +37,8 @@ asdatadir = $(pkgdatadir)/as
 asdata_DATA = as/*
 asnecdatadir = $(pkgdatadir)/as/nec
 asnecdata_DATA = as/nec/*
-esdepdatadir = $(pkgdatadir)/es/dep
-esdepdata_DATA = es/dep/*
+asdepdatadir = $(pkgdatadir)/as/dep
+asdepdata_DATA = as/dep/*
 
 itdatadir = $(pkgdatadir)/it
 itdata_DATA = it/*
