Incorporating UKB Word Sense Disambiguator

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -89,9 +89,15 @@ install-data-hook:
              rm -f $$name.db; \
 	     $(ZCAT) -f $$src | $(bindir)/indexdict $$name.db; \
 	     chmod +r $$name.db; \
+	     $(ZCAT) -f $$src | $(bindir)/convertdict > $$name.ukb; \
+	     chmod +r $$name.ukb; \
 	   done \
 	done
 	@echo "Indexing WN-based semantic database"
 	@rm -f $(pkgdatadir)/common/wn16.db;
 	@$(ZCAT) -f $(pkgdatadir)/common/wn16.src | $(bindir)/indexdict $(pkgdatadir)/common/wn16.db;
 	@chmod +r $(pkgdatadir)/common/wn16.db;
+	@$(bindir)/compile_kb -o $(pkgdatadir)/common/wn16-ukb.bin $(pkgdatadir)/common/wn16-ukb.src;
+
+uninstall-hook:
+	@rm -f $(pkgdatadir)/*/*.db $(pkgdatadir)/*/*.ukb $(pkgdatadir)/*/*.bin
