--- a/data/config/as.cfg
+++ b/data/config/as.cfg
@@ -88,6 +88,8 @@ NECFilePrefix=$FREELINGSHARE/as/nec/nec
 SenseAnnotation=none
 SenseFile=$FREELINGSHARE/as/senses16.db
 DuplicateAnalysis=false
+UKBRelations=$FREELINGSHARE/common/wn16-ukb.bin
+UKBDictionary=$FREELINGSHARE/as/senses16.ukb
 
 #### Tagger options
 Tagger=hmm
