--- a/data/config/ca.cfg
+++ b/data/config/ca.cfg
@@ -84,6 +84,8 @@ NECFilePrefix=$FREELINGSHARE/ca/nec/nec
 SenseAnnotation=none
 SenseFile=$FREELINGSHARE/ca/senses16.db
 DuplicateAnalysis=false
+UKBRelations=$FREELINGSHARE/common/wn16-ukb.bin
+UKBDictionary=$FREELINGSHARE/ca/senses16.ukb
 
 #### Tagger options
 Tagger=hmm
