--- a/data/config/cy.cfg
+++ b/data/config/cy.cfg
@@ -84,6 +84,8 @@ NECFilePrefix=$FREELINGSHARE/cy/nec/nec
 SenseAnnotation=none
 SenseFile=$FREELINGSHARE/cy/senses16.db
 DuplicateAnalysis=false
+UKBRelations=$FREELINGSHARE/common/wn16-ukb.bin
+UKBDictionary=$FREELINGSHARE/cy/senses16.ukb
 
 #### Tagger options
 Tagger=hmm
