--- a/data/config/en.cfg
+++ b/data/config/en.cfg
@@ -84,6 +84,8 @@ NECFilePrefix=$FREELINGSHARE/en/nec/nec
 SenseAnnotation=none
 SenseFile=$FREELINGSHARE/en/senses16.db
 DuplicateAnalysis=false
+UKBRelations=$FREELINGSHARE/common/wn16-ukb.bin
+UKBDictionary=$FREELINGSHARE/en/senses16.ukb
 
 #### Tagger options
 Tagger=relax
