--- a/data/config/es.cfg
+++ b/data/config/es.cfg
@@ -84,10 +84,12 @@ NPDataFile=$FREELINGSHARE/es/np.dat
 NEClassification=no
 NECFilePrefix=$FREELINGSHARE/es/nec/nec
 
-## Sense annotation options (none,all,mfs)
+## Sense annotation options (none,all,mfs,ukb)
 SenseAnnotation=none
 SenseFile=$FREELINGSHARE/es/senses16.db
 DuplicateAnalysis=false
+UKBRelations=$FREELINGSHARE/common/wn16-ukb.bin
+UKBDictionary=$FREELINGSHARE/es/senses16.ukb
 
 #### Tagger options
 Tagger=hmm
