--- a/data/config/gl.cfg
+++ b/data/config/gl.cfg
@@ -84,6 +84,8 @@ NECFilePrefix=$FREELINGSHARE/gl/nec/nec
 SenseAnnotation=none
 SenseFile=$FREELINGSHARE/gl/senses16.db
 DuplicateAnalysis=false
+UKBRelations=$FREELINGSHARE/common/wn16-ukb.bin
+UKBDictionary=$FREELINGSHARE/gl/senses16.ukb
 
 #### Tagger options
 Tagger=hmm
