--- a/data/config/it.cfg
+++ b/data/config/it.cfg
@@ -84,6 +84,8 @@ NECFilePrefix=$FREELINGSHARE/it/nec/nec
 SenseAnnotation=none
 SenseFile=$FREELINGSHARE/it/senses16.db
 DuplicateAnalysis=false
+UKBRelations=$FREELINGSHARE/common/wn16-ukb.bin
+UKBDictionary=$FREELINGSHARE/it/senses16.ukb
 
 #### Tagger options
 Tagger=hmm
