--- a/data/config/pt.cfg
+++ b/data/config/pt.cfg
@@ -88,6 +88,8 @@ NECFilePrefix=$FREELINGSHARE/pt/nec/nec
 SenseAnnotation=none
 SenseFile=$FREELINGSHARE/pt/senses16.db
 DuplicateAnalysis=false
+UKBRelations=$FREELINGSHARE/common/wn16-ukb.bin
+UKBDictionary=$FREELINGSHARE/pt/senses16.ukb
 
 #### Tagger options
 Tagger=hmm
