--- a/data/config/as.cfg
+++ b/data/config/as.cfg
@@ -90,6 +90,8 @@ SenseFile=$FREELINGSHARE/as/senses16.db
 DuplicateAnalysis=false
 UKBRelations=$FREELINGSHARE/common/wn16-ukb.bin
 UKBDictionary=$FREELINGSHARE/as/senses16.ukb
+UKBEpsilon=0.03
+UKBMaxIter=10
 
 #### Tagger options
 Tagger=hmm
