--- a/data/config/cy.cfg
+++ b/data/config/cy.cfg
@@ -86,6 +86,8 @@ SenseFile=$FREELINGSHARE/cy/senses16.db
 DuplicateAnalysis=false
 UKBRelations=$FREELINGSHARE/common/wn16-ukb.bin
 UKBDictionary=$FREELINGSHARE/cy/senses16.ukb
+UKBEpsilon=0.03
+UKBMaxIter=10
 
 #### Tagger options
 Tagger=hmm
