git-svn-id: http://devel.cpl.upc.edu/freeling/svn/latest/freeling@316 9b274142-39a2-40f6-a478-1b104364ee40

--- a/src/main/Makefile.am
+++ b/src/main/Makefile.am
@@ -1,4 +1,4 @@
-EXTRA_DIST = LKB sample_analyzer sample_server_analyzer simple_examples README
+EXTRA_DIST = LKB sample_analyzer simple_examples README
 INCLUDES = -I$(top_srcdir)/src/include
 bin_PROGRAMS = analyzer analyzer_server analyzer_client
 
