git-svn-id: http://devel.cpl.upc.edu/freeling/svn/latest/freeling@322 9b274142-39a2-40f6-a478-1b104364ee40

--- a/APIs/java/Makefile
+++ b/APIs/java/Makefile
@@ -1,4 +1,4 @@
-FREELINGDIR = /home/padro/package/usr/local
+FREELINGDIR = /usr/local
 SWIGDIR = /usr/share/swig1.3
 JAVADIR = /usr/lib/jvm/java-6-sun
 LIBSDIR = /usr/local
