git-svn-id: http://devel.cpl.upc.edu/freeling/svn/latest/freeling@327 9b274142-39a2-40f6-a478-1b104364ee40

--- a/data/config/es.cfg
+++ b/data/config/es.cfg
@@ -78,7 +78,7 @@ NPDataFile=$FREELINGSHARE/es/np.dat
 ## --- comment lines above and uncomment those below, if you want 
 ## --- a better NE recognizer (higer accuracy, lower speed)
 #NERecognition=bio
-#3PDataFile=$FREELINGSHARE/es/ner/ner.dat
+#NPDataFile=$FREELINGSHARE/es/ner/ner.dat
 
 ## NEC options
 NEClassification=no
