--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 EXTRA_DIST = data doc APIs LICENSES
-SUBDIRS = src data doc 
+SUBDIRS = src data
 
 dist-hook:
 	rm -rf `find $(distdir) -name .svn`
