--- a/src/main/Makefile.am
+++ b/src/main/Makefile.am
@@ -1,5 +1,5 @@
 EXTRA_DIST = LKB sample_analyzer simple_examples README
-INCLUDES = -I$(top_srcdir)/src/include
+INCLUDES = -I$(top_srcdir)/src/include -I$(top_srcdir)/libcfg+
 bin_PROGRAMS = analyzer analyzer_server analyzer_client
 
 analyzer_SOURCES = sample_analyzer/analyzer.cc sample_analyzer/config.h
@@ -7,10 +7,10 @@ analyzer_server_SOURCES = sample_analyzer/analyzer_server.cc sample_analyzer/con
 analyzer_client_SOURCES = sample_analyzer/analyzer_client.cc
 
 analyzer_LDADD = -lmorfo -lfries -lomlet -lcfg+ -lpcre -ldb_cxx -lboost_filesystem
-analyzer_LDFLAGS = -L$(top_srcdir)/src/libmorfo
+analyzer_LDFLAGS = -L$(top_srcdir)/src/libmorfo -L$(top_srcdir)/libcfg+
 
 analyzer_server_LDADD = -lmorfo -lfries -lomlet -lcfg+ -lpcre -ldb_cxx -lboost_filesystem
-analyzer_server_LDFLAGS = -L$(top_srcdir)/src/libmorfo
+analyzer_server_LDFLAGS = -L$(top_srcdir)/src/libmorfo -L$(top_srcdir)/libcfg+
 
 analyzer_client_LDADD = -lpthread
 
