git-svn-id: http://devel.cpl.upc.edu/freeling/svn/latest/freeling@346 9b274142-39a2-40f6-a478-1b104364ee40

--- a/libcfg+/Makefile.in
+++ b/libcfg+/Makefile.in
@@ -190,7 +190,7 @@ EXTRA_DIST = *.h platon/str/*.h
 lib_LTLIBRARIES = libcfg+.la
 libcfg__la_SOURCES = cfg+.c cfgfile.c cmdline.c parse.c props.c shared.c platon/str/dynfgets.c platon/str/strctype.c platon/str/strdyn.c platon/str/strplus.c
 libcfg__la_CPPFLAGS = -fPIC
-libcfg__la_LDFLAGS = -version-info 6:2:0
+libcfg__la_LDFLAGS = -release 0.6.2
 all: all-am
 
 .SUFFIXES:
