--- a/libcfg+/Makefile.am
+++ b/libcfg+/Makefile.am
@@ -6,4 +6,4 @@ lib_LTLIBRARIES = libcfg+.la
 libcfg__la_SOURCES = cfg+.c cfgfile.c cmdline.c parse.c props.c shared.c platon/str/dynfgets.c platon/str/strctype.c platon/str/strdyn.c platon/str/strplus.c
 
 libcfg__la_CPPFLAGS = -fPIC
-libcfg__la_LDFLAGS = -version-info 6:2:0
+libcfg__la_LDFLAGS = -release 0.6.2
