--- a/data/config/es.cfg
+++ b/data/config/es.cfg
@@ -63,6 +63,7 @@ DatesDetection=yes
 QuantitiesDetection=yes
 DictionarySearch=yes
 ProbabilityAssignment=yes
+OrthographicCorrection=no
 DecimalPoint=","
 ThousandPoint="."
 LocutionsFile=$FREELINGSHARE/es/locucions.dat 
@@ -79,6 +80,14 @@ NPDataFile=$FREELINGSHARE/es/np.dat
 ## --- a better NE recognizer (higer accuracy, lower speed)
 #NERecognition=bio
 #NPDataFile=$FREELINGSHARE/es/ner/ner.dat
+
+#Corrector options
+# the corrector common files are .phdistances .sampa .soundDicFile
+# the corrector language files are .db and .rules
+CorrectorLang=$FREELINGSHARE/es/corrector/corrector
+CorrectorCommon=$FREELINGSHARE/common/corrector/corrector
+# can be phonetic or similarity
+DistanceMethod=similarity
 
 ## NEC options
 NEClassification=no
