--- a/data/config/it.cfg
+++ b/data/config/it.cfg
@@ -63,6 +63,7 @@ DatesDetection=yes
 QuantitiesDetection=yes
 DictionarySearch=yes
 ProbabilityAssignment=yes
+OrthographicCorrection=no
 DecimalPoint=","
 ThousandPoint="."
 LocutionsFile=$FREELINGSHARE/it/locucions.dat 
@@ -75,6 +76,14 @@ ProbabilityThreshold=0.001
 # NER options
 NERecognition=basic
 DictionaryFile=$FREELINGSHARE/it/maco.db
+
+#Corrector options
+# the corrector common files are .phdistances .sampa .soundDicFile
+# the corrector language files are .db and .rules
+CorrectorLang=$FREELINGSHARE/it/corrector/corrector
+CorrectorCommon=$FREELINGSHARE/common/corrector/corrector
+# can be phonetic or similarity
+DistanceMethod=similarity
 
 ## NEC options
 NEClassification=no
