--- a/data/config/cy.cfg
+++ b/data/config/cy.cfg
@@ -63,6 +63,7 @@ DatesDetection=yes
 QuantitiesDetection=yes
 DictionarySearch=yes
 ProbabilityAssignment=yes
+OrthographicCorrection=no
 DecimalPoint="."
 ThousandPoint=","
 LocutionsFile=$FREELINGSHARE/cy/locucions.dat 
@@ -75,6 +76,15 @@ ProbabilityThreshold=0.001
 # NER options
 NERecognition=basic
 NPDataFile=$FREELINGSHARE/cy/np.dat
+
+#Corrector options
+# the corrector common files are .phdistances .sampa .soundDicFile
+# the corrector language files are .db and .rules
+CorrectorLang=$FREELINGSHARE/cy/corrector/corrector
+CorrectorCommon=$FREELINGSHARE/common/corrector/corrector
+# can be phonetic or similarity
+DistanceMethod=similarity
+
 
 ## NEC options
 NEClassification=no
