--- a/src/utilities/Makefile.am
+++ b/src/utilities/Makefile.am
@@ -1,5 +1,5 @@
 EXTRA_DIST = hmm_smooth.perl train-relax.perl make-probs-file.perl TRAIN unk-tags constr_gram.manual nec/README nec/TRAIN.sh nec/lexicon.cc nec/train.cc
-bin_PROGRAMS = indexdict convertdict createIndex compile_ukb
+bin_PROGRAMS = indexdict convertdict dicc2phon compile_ukb
 
 indexdict_SOURCES = indexdict.cc
 indexdict_LDADD = -ldb_cxx
@@ -7,9 +7,9 @@ indexdict_LDADD = -ldb_cxx
 convertdict_SOURCES = convertdict.cc
 convertdict_LDADD = -lfries -lpcre
 
-createIndex_SOURCES = corrector/createIndex.cc $(top_srcdir)/src/libmorfo/corrector/phonetics.cc $(top_srcdir)/src/libmorfo/corrector/soundChange.cc
-createIndex_LDADD = -lfries -lpcre
-createIndex_CXXFLAGS = -I$(top_srcdir)/src/include/
+dicc2phon_SOURCES = corrector/dicc2phon.cc $(top_srcdir)/src/libmorfo/corrector/phonetics.cc $(top_srcdir)/src/libmorfo/corrector/soundChange.cc
+dicc2phon_LDADD = -lfries -lpcre
+dicc2phon_CXXFLAGS = -I$(top_srcdir)/src/include/
 
 compile_ukb_SOURCES = compile_ukb.cc $(top_srcdir)/src/libmorfo/disambiguator/ukb/globalVars.cc $(top_srcdir)/src/libmorfo/disambiguator/ukb/kbGraph.cc $(top_srcdir)/src/libmorfo/disambiguator/ukb/wdict.cc $(top_srcdir)/src/libmorfo/disambiguator/ukb/common.cc 
 compile_ukb_CXXFLAGS = -I$(top_srcdir)/src/libmorfo/disambiguator/ukb
