git-svn-id: http://devel.cpl.upc.edu/freeling/svn/latest/freeling@383 9b274142-39a2-40f6-a478-1b104364ee40

--- a/data/config/as.cfg
+++ b/data/config/as.cfg
@@ -79,17 +79,10 @@ NPDataFile=$FREELINGSHARE/as/np.dat
 ## --- comment lines above and uncomment those below, if you want 
 ## --- a better NE recognizer (higer accuracy, lower speed)
 #NERecognition=bio
-#3PDataFile=$FREELINGSHARE/as/ner/ner.dat
+#NPDataFile=$FREELINGSHARE/as/ner/ner.dat
 
-
-#Corrector options
-# the corrector common files are .phdistances .sampa .soundDicFile
-# the corrector language files are .db and .rules
-CorrectorLang=$FREELINGSHARE/as/corrector/corrector
-CorrectorCommon=$FREELINGSHARE/common/corrector/corrector
-# can be phonetic or similarity
-DistanceMethod=similarity
-
+#Spelling Corrector config file
+CorrectorFile=$FREELINGSHARE/as/corrector/corrector.dat
 
 ## NEC options
 NEClassification=no
