--- a/data/config/es.cfg
+++ b/data/config/es.cfg
@@ -81,13 +81,8 @@ NPDataFile=$FREELINGSHARE/es/np.dat
 #NERecognition=bio
 #NPDataFile=$FREELINGSHARE/es/ner/ner.dat
 
-#Corrector options
-# the corrector common files are .phdistances .sampa .soundDicFile
-# the corrector language files are .db and .rules
-CorrectorLang=$FREELINGSHARE/es/corrector/corrector
-CorrectorCommon=$FREELINGSHARE/common/corrector/corrector
-# can be phonetic or similarity
-DistanceMethod=similarity
+#Spelling Corrector config file
+CorrectorFile=$FREELINGSHARE/es/corrector/corrector.dat
 
 ## NEC options
 NEClassification=no
