--- a/data/config/it.cfg
+++ b/data/config/it.cfg
@@ -77,13 +77,8 @@ ProbabilityThreshold=0.001
 NERecognition=basic
 DictionaryFile=$FREELINGSHARE/it/maco.db
 
-#Corrector options
-# the corrector common files are .phdistances .sampa .soundDicFile
-# the corrector language files are .db and .rules
-CorrectorLang=$FREELINGSHARE/it/corrector/corrector
-CorrectorCommon=$FREELINGSHARE/common/corrector/corrector
-# can be phonetic or similarity
-DistanceMethod=similarity
+#Spelling Corrector config file
+CorrectorFile=$FREELINGSHARE/it/corrector/corrector.dat
 
 ## NEC options
 NEClassification=no
