--- a/data/config/cy.cfg
+++ b/data/config/cy.cfg
@@ -77,14 +77,8 @@ ProbabilityThreshold=0.001
 NERecognition=basic
 NPDataFile=$FREELINGSHARE/cy/np.dat
 
-#Corrector options
-# the corrector common files are .phdistances .sampa .soundDicFile
-# the corrector language files are .db and .rules
-CorrectorLang=$FREELINGSHARE/cy/corrector/corrector
-CorrectorCommon=$FREELINGSHARE/common/corrector/corrector
-# can be phonetic or similarity
-DistanceMethod=similarity
-
+#Spelling Corrector config file
+CorrectorFile=$FREELINGSHARE/cy/corrector/corrector.dat
 
 ## NEC options
 NEClassification=no
