--- a/data/config/pt.cfg
+++ b/data/config/pt.cfg
@@ -79,15 +79,10 @@ NPDataFile=$FREELINGSHARE/pt/np.dat
 ## --- comment lines above and uncomment those below, if you want 
 ## --- a better NE recognizer (higer accuracy, lower speed)
 #NERecognition=bio
-#3PDataFile=$FREELINGSHARE/pt/ner/ner.dat
+#NPDataFile=$FREELINGSHARE/pt/ner/ner.dat
 
-#Corrector options
-# the corrector common files are .phdistances .sampa .soundDicFile
-# the corrector language files are .db and .rules
-CorrectorLang=$FREELINGSHARE/pt/corrector/corrector
-CorrectorCommon=$FREELINGSHARE/common/corrector/corrector
-# can be phonetic or similarity
-DistanceMethod=similarity
+#Spelling Corrector config file
+CorrectorFile=$FREELINGSHARE/pt/corrector/corrector.dat
 
 ## NEC options
 NEClassification=no
