--- a/APIs/java/Makefile
+++ b/APIs/java/Makefile
@@ -5,7 +5,7 @@ LIBSDIR = /usr/local
 GCC=g++-4.2
 
 libmorfo_java.so: libmorfo_wrap.cxx
-	$(GCC) -shared -o libmorfo_java.so libmorfo_wrap.cxx -lmorfo -ldb_cxx -lpcre -lomlet -lfries  -lboost_filesystem -I /usr/include/db4 -L $(FREELINGDIR)/lib  -I $(FREELINGDIR)/include -I $(LIBSDIR)/include -L $(LIBSDIR)/lib -I $(JAVADIR)/include -I $(JAVADIR)/include/linux
+	$(GCC) -shared -o libmorfo_java.so libmorfo_wrap.cxx -lmorfo -ldb_cxx -lpcre -lomlet -lfries  -lboost_filesystem-mt -I /usr/include/db4 -L $(FREELINGDIR)/lib  -I $(FREELINGDIR)/include -I $(LIBSDIR)/include -L $(LIBSDIR)/lib -I $(JAVADIR)/include -I $(JAVADIR)/include/linux
 	cp classes_aux/* morfo/
 	javac morfo/*.java
 	jar -cf libmorfo_java.jar morfo
