--- a/configure.ac
+++ b/configure.ac
@@ -79,7 +79,8 @@ AC_CHECK_LIB([db_cxx],[main],[echo "OK">/dev/null],[echo "" &&
                       echo "   or the like) is installed and can be found in a standard path." &&
                       echo "   You may need to set LDFLAGS to specify search path." &&
                       echo "" && exit])
-AC_CHECK_LIB([boost_filesystem],[main],[echo "OK">/dev/null],
+AC_CHECK_LIB([boost_filesystem],[main],
+                      [echo "OK">/dev/null; AM_CONDITIONAL([BOOST_MT],[test 1 = 0])],
                       AC_CHECK_LIB([boost_filesystem-mt],[main],
                            [echo "OK">/dev/null;AM_CONDITIONAL([BOOST_MT],[test 1 = 1])],
                            [echo "" &&
