El servidor que utiliza la salida y la entrada estandard
git-svn-id: http://devel.cpl.upc.edu/freeling/svn/latest/freeling@409 9b274142-39a2-40f6-a478-1b104364ee40

--- a/src/main/Makefile.am
+++ b/src/main/Makefile.am
@@ -1,6 +1,6 @@
 EXTRA_DIST = LKB sample_analyzer simple_examples README
 INCLUDES = -I$(top_srcdir)/src/include -I$(top_srcdir)/libcfg+
-bin_PROGRAMS = analyzer analyzer_server analyzer_client analyzer_clientUTF
+bin_PROGRAMS = analyzer analyzer_server analyzer_serverSTD analyzer_client analyzer_clientUTF
 
 if BOOST_MT
  MT="-mt"
@@ -10,6 +10,7 @@ endif
 
 analyzer_SOURCES = sample_analyzer/analyzer.cc sample_analyzer/config.h
 analyzer_server_SOURCES = sample_analyzer/analyzer_server.cc sample_analyzer/config.h
+analyzer_serverSTD_SOURCES = sample_analyzer/analyzer_serverSTD.cc sample_analyzer/config.h
 analyzer_client_SOURCES = sample_analyzer/analyzer_client.cc
 analyzer_clientUTF_SOURCES = sample_analyzer/analyzer_clientUTF.cc
 
@@ -18,6 +19,11 @@ analyzer_LDFLAGS = -L$(top_srcdir)/src/libmorfo -L$(top_srcdir)/libcfg+
 
 analyzer_server_LDADD = -lmorfo -lfries -lomlet -lcfg+ -lpcre -ldb_cxx -lboost_filesystem$(MT)
 analyzer_server_LDFLAGS = -L$(top_srcdir)/src/libmorfo -L$(top_srcdir)/libcfg+
+
+analyzer_serverSTD_LDADD = -lmorfo -lfries -lomlet -lcfg+ -lpcre -ldb_cxx -lboost_filesystem$(MT)
+analyzer_serverSTD_LDFLAGS = -L$(top_srcdir)/src/libmorfo -L$(top_srcdir)/libcfg+
+
+
 
 analyzer_client_LDADD = -lpthread
 analyzer_clientUTF_LDADD = -lpthread
