git-svn-id: http://devel.cpl.upc.edu/freeling/svn/latest/freeling@419 9b274142-39a2-40f6-a478-1b104364ee40

--- a/configure.ac
+++ b/configure.ac
@@ -83,12 +83,14 @@ AC_CHECK_LIB([boost_filesystem],[main],
                       [echo "OK">/dev/null; AM_CONDITIONAL([BOOST_MT],[test 1 = 0])],
                       AC_CHECK_LIB([boost_filesystem-mt],[main],
                            [echo "OK">/dev/null;AM_CONDITIONAL([BOOST_MT],[test 1 = 1])],
-                           [echo "" &&
-                            echo "   boost_filesystem library not found." &&
-                            echo "   Make sure libboost_filesystem is" &&
-                            echo "   installed and can be found in a standard path." &&
-                            echo "   You may need to set LDFLAGS to specify search path." &&
-                            echo "" && exit]))
+			   AC_CHECK_LIB([boost_filesystem-gcc-mt],[main],
+                                 [echo "OK">/dev/null;AM_CONDITIONAL([BOOST_MT],[test 1 = 1])],
+                                 [echo "" &&
+                                  echo "   boost_filesystem library not found." &&
+                                  echo "   Make sure libboost_filesystem is" &&
+                                  echo "   installed and can be found in a standard path." &&
+                                  echo "   You may need to set LDFLAGS to specify search path." &&
+                                  echo "" && exit])))
 AC_CHECK_LIB([omlet],[main],[echo "OK">/dev/null],[echo "" &&
                       echo "   Omlet library not found." &&
                       echo "   Make sure libomlet is" &&
