--- a/configure.ac
+++ b/configure.ac
@@ -79,12 +79,15 @@ AC_CHECK_LIB([db_cxx],[main],[echo "OK">/dev/null],[echo "" &&
                       echo "   or the like) is installed and can be found in a standard path." &&
                       echo "   You may need to set LDFLAGS to specify search path." &&
                       echo "" && exit])
+
+AM_CONDITIONAL([BOOST_MT],[test 1 = 0]) 
+AM_CONDITIONAL([BOOST_GCC],[test 1 = 0])
 AC_CHECK_LIB([boost_filesystem],[main],
-                      [echo "OK">/dev/null; AM_CONDITIONAL([BOOST_MT],[test 1 = 0])],
+                      [echo "OK">/dev/null;],
                       AC_CHECK_LIB([boost_filesystem-mt],[main],
                            [echo "OK">/dev/null;AM_CONDITIONAL([BOOST_MT],[test 1 = 1])],
 			   AC_CHECK_LIB([boost_filesystem-gcc-mt],[main],
-                                 [echo "OK">/dev/null;AM_CONDITIONAL([BOOST_MT],[test 1 = 1])],
+                                 [echo "OK">/dev/null;AM_CONDITIONAL([BOOST_GCC],[test 1 = 1])],
                                  [echo "" &&
                                   echo "   boost_filesystem library not found." &&
                                   echo "   Make sure libboost_filesystem is" &&
